# moto_scraper

./: .gitignore  pyproject.toml
otomoto/: main.py  scrapy.cfg
otomoto/mailer/: body.py  mailer.py
otomoto/otomoto_scraper/: itemloaders.py  items.py  middlewares.py  pipelines.py  settings.py
otomoto/otomoto_scraper/spiders/: moto_spider.py
tests/: test_otomoto.py
