[tool.poetry]
name = "otomoto"
version = "0.1.0"
description = ""
authors = ["Dominik Baran <iiron3223@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
